force-app/main/default/objects/FieloEE__RuleAction__c/FieloEE__RuleAction__c.object-meta.xml
<CustomObject>
    <description>Deprecated</description>
    <label>zz_deprecated_Rule Action</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>zz_deprecated_Rule Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>