force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__ConvertionType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ConvertionType__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Convertion Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloEE__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fix Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
            <value>
                <fullName>Reward Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>