force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__ConvertionValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ConvertionValue__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Convertion Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>