force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>