force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__ExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExpirationMonth__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Expiration Month</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>