force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldName__c</fullName>
    <defaultValue>"Value__c"</defaultValue>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>