force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__InstantReward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__InstantReward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Instant Reward</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__Reward__c.FieloEE__isInstantReward__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Reward__c</referenceTo>
    <relationshipLabel>Rule Actions</relationshipLabel>
    <relationshipName>RuleActions</relationshipName>
    <type>Lookup</type>
</CustomField>