force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Rule__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Rule</label>
    <referenceTo>FieloEE__Rule__c</referenceTo>
    <relationshipLabel>Rule Actions</relationshipLabel>
    <relationshipName>RuleActions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>