force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__StockControl__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__StockControl__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Stock Control</label>
    <type>Checkbox</type>
</CustomField>