force-app/main/default/objects/FieloEE__RuleAction__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>Deprecated Field</description>
    <inlineHelpText>Here you choose when to use the given rule. Best Option: Among applicable rules, the best option will be chosen. Always: This rule will always be applied.</inlineHelpText>
    <label>zz_deprecated_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Option</fullName>
                <default>true</default>
                <label>Best Option</label>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Instant Reward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>