force-app/main/default/objects/FieloEE__RuleAction__c/validationRules/FieloEE__Value_Different_of_0.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloEE__Value_Different_of_0</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND ( OR( ISPICKVAL( FieloEE__ConvertionType__c , &#39;Factor&#39; ) , ISPICKVAL( FieloEE__ConvertionType__c , &#39;Multiplier&#39; ) ) ,  FieloEE__ConvertionValue__c == 0 ) , true , false )</errorConditionFormula>
    <errorMessage>You must put a value different of 0</errorMessage>
</ValidationRule>